# DBTlearning

./: cos.ipynb
ProjectGCP/: dbt_project.yml  my_db.duckdb  pyproject.toml
ProjectGCP/models/: sources.yml
ProjectGCP/models/marts/: num_by_region.sql
ProjectGCP/models/staging/: stg_green_taxi.sql  stg_region.sql
