[project]
name = "projectgcp"
version = "0.1.0"
description = ""
authors = [
    {name = "kacper",email = "kacpro944@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-bigquery (>=1.10.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
