[project]
name = "projectgcp"
version = "0.1.0"
description = ""
authors = [
    {name = "kacper",email = "kacpro944@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "dbt-duckdb (>=1.10.0,<2.0.0)",
    "harlequin (>=2.4.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
